testdata/baselines/reference/submodule/compiler/verbatimModuleSyntaxReactReference.errors.txt
index.tsx(1,1): error TS6133: 'React' is declared but its value is never read.


==== react.d.ts (0 errors) ====
    declare module 'react';
    
==== index.tsx (1 errors) ====
    import React from 'react';
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS6133: 'React' is declared but its value is never read.
    
    export const build = <div>hello </div>;
    